data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3801.wast
;; 10. **Test: Br_Table with Mixed Instruction Types in A Single Function**     - **Description**: Implement a function with `br_table` and various other instructions (load, store), followed by nested `call` instructions.     - **Constraint**: Assess handling of mixed instruction flows ensuring stack state conformity across boundary condition for calls.     - **Edge Case**: Examines robustness in mixed environments with `br_table` ensuring the stack correctly supports nested call operations.

(assert_invalid
  (module
    (func $mixed-br_table
      (block $label0
        (br_table $label0 $label0 (i32.const 0))
        (call 1 (i32.const 0))
        (i32.load (i32.const 0))
        (call 2 (i32.const 1))
        (i32.store (i32.const 0) (i32.const 1))
        (call 3 (i32.const 2))
      )
    )
    (func (param i32))
    (func (param i32))
    (func (param i32))
  )
  "type mismatch"
)